# reportseff

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  ABOUT.md  LICENSE  README.md  conftest.py  noxfile.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  release.yml  tests.yml
reportseff/: db_inquirer.py  job.py  job_collection.py  output_renderer.py  reportseff.py
src/reportseff/: __init__.py  console.py  db_inquirer.py  job.py  job_collection.py  output_renderer.py  parameters.py
test/: test_job.py  test_job_collection.py  test_reportseff.py
tests/: __init__.py  conftest.py  test_db_inquirer.py  test_job.py  test_job_collection.py  test_output_renderer.py  test_reportseff.py  typings.py
