[tool.poetry]
name = "reportseff"
version = "2.7.6"
description= "Tablular seff output"
authors = ["Troy Comi <troycomi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage= "https://github.com/troycomi/reportseff"
repository= "https://github.com/troycomi/reportseff"
keywords= ["slurm","seff"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = ">=6.7"
importlib-metadata = {version = "^4.8.2", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
coverage = {extras = ["toml"], version = "^7.5.4"}
pytest-cov = "^5.0.0"
safety = "^3.2.4"
mypy = "^1.10.1"
types-click = "^7.1.8"
pytype = "^2024.4.11"
typeguard = "^4.3.0"
darglint = ">=1.8.1"
codecov = ">=2.1.13"
ruff = "^0.5.5"

[tool.poetry.scripts]
reportseff = "reportseff.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["reportseff"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff.lint]
select = [
  "F",  # pyflakes
  # "E",  # pycode style Error
  "W",  # pycode style Warning
  "I",  # isort
  "N",  # pep8-naming
  # "D",  # pydocstyle
  "UP",  # pyupgrade
  "ANN",  # annotations
  "S",  # bandit
  "BLE",
  "FBT",  # boolean trap
  "B",  # bugbear
  "A",  # builtins
  "COM",  # commas
  "C4",  # comprehensions
  "T10",  # debugger
  # "FA",  # error message
  "ISC",  # String concatenation
  "ICN",  # import conventions
  "PIE",  # pie
  "T20",  # print
  "PT",  # pytest style
  "Q",  # Quotes
  "RSE",  # raise
  # "RET",  # return
  # "SLF",  # Self
  # "SIM",  # simplify
  "TID",  # tidy imports
  # "TCH",  # type checking
  "INT",  # gettext
  "ARG",  # tidy imports
  # "PTH",  # use pathlib
  "TD",  # todos
  "ERA",  # commented out code
  # "PL",  # pylint
  # "TRY",  # tryceratops
  # "PERF",  # perflint
  "FURB",  # refurb
  "RUF",  # ruff
]
ignore = [
  "ANN101",  # missing self
  "ANN401",  # allow Any
  "COM812",  # allow missing commas on last element
  "ISC001",  # recommended by format
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ANN",  # type annotations
  "S101",  # use assert
  "PLR2004",  # magic numbers in tests
]
"noxfile.py" = [
  "ANN",  # type annotations
]
