[tool.poetry]
name = "reportseff"
version = "2.8.4"
description= "Tablular seff output"
authors = ["Troy Comi <troycomi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage= "https://github.com/troycomi/reportseff"
repository= "https://github.com/troycomi/reportseff"
keywords= ["slurm","seff"]

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
click = ">=6.7"
importlib-metadata = {version = "^4.8.2", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
coverage = {extras = ["toml"], version = "^7.5.4"}
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
types-click = "^7.1.8"
pytype = "^2024.4.11"
typeguard = "^4.3.0"
darglint = ">=1.8.1"
codecov = ">=2.1.13"
ruff = "^0.5.5"

[tool.poetry.scripts]
reportseff = "reportseff.console:main"

[tool.poetry.group.dev-dependencies.dependencies]
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["reportseff"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff.lint]
select = [
  "A",  # builtins
  "ANN",  # annotations
  "ARG",  # tidy imports
  "B",  # bugbear
  "BLE",
  "C4",  # comprehensions
  "COM",  # commas
  "D",  # pydocstyle
  "E",  # pycode style Error
  "ERA",  # commented out code
  "F",  # pyflakes
  "FA",  # error message
  "FBT",  # boolean trap
  "FURB",  # refurb
  "I",  # isort
  "ICN",  # import conventions
  "INT",  # gettext
  "ISC",  # String concatenation
  "N",  # pep8-naming
  "PERF",  # perflint
  "PIE",  # pie
  "PL",  # pylint
  "PT",  # pytest style
  "PTH",  # use pathlib
  "Q",  # Quotes
  "RET",  # return
  "RSE",  # raise
  "RUF",  # ruff
  "S",  # bandit
  "SIM",  # simplify
  "SLF",  # Self
  "T10",  # debugger
  "T20",  # print
  "TCH",  # type checking
  "TD",  # todos
  "TID",  # tidy imports
  "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycode style Warning
]

ignore = [
  "ANN101",  # missing self
  "ANN401",  # allow Any
  "COM812",  # allow missing commas on last element
  "ISC001",  # recommended by format
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ANN",  # type annotations
  "S101",  # use assert
  "PLR2004",  # magic numbers in tests
  "SLF001",  # allow private methods in tests
]

"noxfile.py" = [
  "ANN",  # type annotations
]

[tool.ruff.lint.pydocstyle]
convention = "google"
