[project]
name = "reportseff"
version = "2.10.1"
description= "Tablular seff output"
authors = [
  {name="Troy Comi", email="<troycomi@gmail.com>"}
]
license = "MIT"
readme = "README.md"
keywords= ["slurm","seff"]
requires-python = ">=3.9"
dependencies = [
    "click>=6.7",
]

[project.scripts]
reportseff = "reportseff.console:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[urls]
homepage= "https://github.com/troycomi/reportseff"
repository= "https://github.com/troycomi/reportseff"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pip-audit>=2.9.0",
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytype>=2024.9.13",
    "ruff>=0.15.0",
    "typeguard>=4.4.4",
]

[tool.poe.tasks]
format = "ruff format"

checks = ["lint", "audit", "mypy", "pytype"]
lint = "ruff check"
audit = "pip-audit"
mypy = "mypy ."
pytype = "pytype ."

tests = ["pytest", "typed-tests", "coverage-tests", "old-click-tests"]
pytest = "pytest"
typed-tests = "pytest --typeguard-packages=reportseff"
coverage-tests = "pytest --cov"
old-click-tests = "uv run --with 'click==6.7' pytest"

coverage-xml = "uv run --with coverage[toml] coverage xml --fail-under 0"
coverage-upload = "uv run --with codecov codecov"
coverage = ["coverage-xml", "coverage-upload"]

[tool.poetry.dev-dependencies]
types-click = "^7.1.8"
darglint = ">=1.8.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["reportseff"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff.lint]
select = [
  "A",  # builtins
  "ANN",  # annotations
  "ARG",  # tidy imports
  "B",  # bugbear
  "BLE",
  "C4",  # comprehensions
  "COM",  # commas
  "D",  # pydocstyle
  "E",  # pycode style Error
  "ERA",  # commented out code
  "F",  # pyflakes
  "FA",  # error message
  "FBT",  # boolean trap
  "FURB",  # refurb
  "I",  # isort
  "ICN",  # import conventions
  "INT",  # gettext
  "ISC",  # String concatenation
  "N",  # pep8-naming
  "PERF",  # perflint
  "PIE",  # pie
  "PL",  # pylint
  "PT",  # pytest style
  "PTH",  # use pathlib
  "Q",  # Quotes
  "RET",  # return
  "RSE",  # raise
  "RUF",  # ruff
  "S",  # bandit
  "SIM",  # simplify
  "SLF",  # Self
  "T10",  # debugger
  "T20",  # print
  "TCH",  # type checking
  "TD",  # todos
  "TID",  # tidy imports
  "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycode style Warning
]

ignore = [
  "ANN101",  # missing self
  "ANN401",  # allow Any
  "COM812",  # allow missing commas on last element
  "ISC001",  # recommended by format
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ANN",  # type annotations
  "S101",  # use assert
  "PLR2004",  # magic numbers in tests
  "SLF001",  # allow private methods in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
show_error_codes = true

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
